@@ -43,7 +43,7 @@ type checkpoint =
    mutable c_parent : checkpoint;
    mutable c_breakpoint_version : int;
    mutable c_breakpoints : (pc * int ref) list;
-   mutable c_trap_barrier : int;
+   mutable c_trap_barrier : Sp.t;
    mutable c_code_fragments : int list}
 
 (*** Pseudo-checkpoint `root'. ***)
@@ -57,4 +57,4 @@ val current_checkpoint : checkpoint ref
 val current_time : unit -> int64
 val current_report : unit -> report option
 val current_pc : unit -> pc option
-val current_pc_sp : unit -> (pc * int) option
+val current_pc_sp : unit -> (pc * Sp.t) option
