@@ -1,5 +1,5 @@
 (* @configure_input@ *)
-#2 "stdlib/sys.ml.in"
+#3 "sys.ml.in"
 (**************************************************************************)
 (*                                                                        *)
 (*                                 OCaml                                  *)
